fix spacing issue when you check/uncheck supply

--- a/src/applications/disability-benefits/2346/sass/form-2346.scss
+++ b/src/applications/disability-benefits/2346/sass/form-2346.scss
@@ -32,6 +32,10 @@
     }
 }
 
+.vads-u-padding--21 {
+  padding: 21px;
+}
+
 .vads-u-max-width--226 {
   max-width: 226px;
 }
